# predef

./: .gitignore  .travis.yml  CMakeLists.txt  appveyor.yml  azure-pipelines.yml  build.jam  buildfile  jamroot.jam  manifest  mksvn.sh
boost/: predef.h  predef.hpp
boost/predef/: architecture.h  architecture.hpp  compiler.h  compiler.hpp  language.h  library.h  library.hpp  make.h  os.h  os.hpp  version_number.h  version_number.hpp
boost/predef/architecture/: _.h  _.hpp  alpha.h  alpha.hpp  amd64.h  amd64.hpp  arm.h  arm.hpp  convex.h  ia64.h  ia64.hpp  m68k.h  m68k.hpp  mips.h  mips.hpp  parisc.h  parisc.hpp  ppc.h  ppc.hpp  pyramid.h  rs6k.h  rs6k.hpp  sparc.h  sparc.hpp  superh.h  superh.hpp  sys370.h  sys370.hpp  sys390.h  sys390.hpp  x86.h  x86.hpp  z.h  z.hpp
boost/predef/compiler/: borland.h  borland.hpp  clang.h  comeau.h  comeau.hpp  compaq.h  compaq.hpp  cygwin.h  cygwin.hpp  diab.h  diab.hpp  digitalmars.h  digitalmars.hpp  dignus.h  dignus.hpp  edg.h  edg.hpp  ekopath.h  ekopath.hpp  gcc.h  gcc.hpp  gcc_xml.h  gcc_xml.hpp  greenhills.h  greenhills.hpp  hp_acc.h  hp_acc.hpp  iar.h  iar.hpp  ibm.h  ibm.hpp  intel.h  intel.hpp  kai.h  kai.hpp  llvm.h  llvm.hpp  metaware.h  metaware.hpp  metrowerks.h  (+21 more)
boost/predef/detail/: _cassert.h  _exception.h  test.h  vrp.h  vrp.hpp
boost/predef/language/: objc.h  stdc.h  stdcpp.h
boost/predef/os/: aix.h  aix.hpp  amigaos.h  amigaos.hpp  beos.h  beos.hpp  bsd.h  bsd.hpp  cygwin.h  cygwin.hpp  hpux.h  hpux.hpp  irix.h  irix.hpp  linux.h  linux.hpp  macos.h  macos.hpp  os400.h  qnxnto.h  qnxnto.hpp  solaris.h  solaris.hpp  unix.h  unix.hpp  vms.h  windows.h  windows.hpp
boost/predef/os/bsd/: dragonfly.h
check/: predef.jam  predef_check_as_c.c
doc/: build.jam  history.adoc  history.qbk  index.html  predef.adoc  predef.qbk  todo.qbk
doc/html/: .gitignore  index.html
doc/html/predef/: acknoledgements.html  adding_new_predefs.html  check_utilities.html  check_utility.html  history.html  introduction.html  reference.html  to_do.html  using_the_predefs.html
doc/html/predef/reference/: boost_arch_architecture_macros.html  boost_comp_compiler_macros.html  boost_hw_hardware_macros.html  boost_lang_language_standards_ma.html  boost_lib_library_macros.html  boost_os_operating_system_macros.html  other_macros.html  version_definition_macros.html
include/: buildfile
include/boost/: predef.h
include/boost/detail/: endian.hpp
include/boost/predef/: architecture.h  endian.h  hardware.h  make.h  os.h  other.h  platform.h  version.h  version_number.h
include/boost/predef/architecture/: alpha.h  amd64.h  arm.h  blackfin.h  convex.h  e2k.h  ia64.h  m68k.h  mips.h  parisc.h  ppc.h  ptx.h  pyramid.h  riscv.h  rs6k.h  sparc.h  superh.h  sys370.h  sys390.h  x86.h  z.h
include/boost/predef/compiler/: borland.h  clang.h  comeau.h  compaq.h  diab.h  digitalmars.h  dignus.h  edg.h  ekopath.h  gcc.h  gcc_xml.h  greenhills.h  hp_acc.h  iar.h  ibm.h  intel.h  kai.h  llvm.h  metaware.h  metrowerks.h  microtec.h  mingw.h  mpw.h  palm.h  pgi.h  sgi_mipspro.h  sunpro.h  tendra.h  visualc.h  watcom.h
include/boost/predef/detail/: endian_compat.h
include/boost/predef/hardware/: simd.h
include/boost/predef/language/: objc.h  stdc.h  stdcpp.h
include/boost/predef/os/: aix.h  amigaos.h  android.h  beos.h  bsd.h  cygwin.h  haiku.h  hpux.h  ios.h  irix.h  linux.h  macos.h  os400.h  qnxnto.h  solaris.h  unix.h  vms.h  windows.h
include/boost/predef/other/: endian.h  wordsize.h
include/boost/predef/platform/: ios.h  mingw.h  windows_desktop.h  windows_phone.h  windows_runtime.h  windows_server.h  windows_store.h  windows_system.h  windows_uwp.h
libs/predef/doc/: build.jam  predef.qbk
libs/predef/test/: build.jam  info_as_c.c  info_as_cpp.cpp  make.cpp  version.cpp
test/: .gitignore  build.jam  buildfile  make.cpp  platform_windows.cpp
test/compile/: decl_header.cpp
test/test_cmake/: CMakeLists.txt  main.cpp
tools/ci/: build_log.py  common.py  library_test.py
(+38 files in other folders)
